chapter5-lambda-monolith-migration-benchmark/scenario-diurnal-nocturnal-scaling/monolithic/cloudformation-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to set up an EC2 Auto Scaling group with ALB and scaling based on request duration.

Resources:

Resources:
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: MyVPC

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  # Attach Internet Gateway to VPC
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Public Subnet 1 in the first AZ
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: PublicSubnet1

  # Public Subnet 2 in the second AZ
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: PublicSubnet2

  # Route Table for Public Subnets
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  # Route to Internet Gateway
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Associate Subnets with Route Table
  SubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  SubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  # Security Group for EC2 Instances
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2 instances running Node.js
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22              # SSH port
          ToPort: 22                # SSH port
          CidrIp: 0.0.0.0/0         # Open to the world
        - IpProtocol: tcp
          FromPort: 3000            # Application port
          ToPort: 3000              # Application port
          CidrIp: 0.0.0.0/0         # Open to the world

  # Security Group for Load Balancer
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Load Balancer allowing HTTP traffic
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80              # HTTP port
          ToPort: 80                # HTTP port
          CidrIp: 0.0.0.0/0         # Open to the world

  # Application Load Balancer
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: MyLoadBalancer
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Scheme: internet-facing
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '60'
      Type: application

  # Load Balancer Listener
  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref TargetGroup
            Type: forward
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP

  # Load Balancer Target Group
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 3000
      Protocol: HTTP
      TargetType: instance
      VpcId: !Ref VPC
      HealthCheckProtocol: HTTP
      HealthCheckPort: 3000
      HealthCheckPath: /health
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2

  # Auto Scaling Launch Template
  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub "${AWS::StackName}-LaunchTemplate"
      LaunchTemplateData:
        ImageId: !Sub "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64}}"
        InstanceType: t3.small
        KeyName: ec2
        SecurityGroupIds:
          - !Ref EC2SecurityGroup
        CreditSpecification:
          CpuCredits: standard # Standard CPU credits (not unlimited https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/burstable-performance-instances-unlimited-mode.html)
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            curl -fsSL https://rpm.nodesource.com/setup_20.x | sudo -E bash -
            sudo yum install -y nodejs
            sudo npm install -g pm2
            wget https://tesina-migration-scenario-diurnal-nocturnal-scaling.s3.amazonaws.com/tesina-migration-scenario-diurnal-nocturnal-scaling-monolithic.zip -P /home/ec2-user/
            unzip /home/ec2-user/tesina-migration-scenario-diurnal-nocturnal-scaling-monolithic.zip -d /home/ec2-user/tesina-migration-scenario-diurnal-nocturnal-scaling-monolithic
            cd /home/ec2-user/tesina-migration-scenario-diurnal-nocturnal-scaling-monolithic
            pm2 start ecosystem.config.js

  # Auto Scaling Group
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      MinSize: '2' # Minimum of 2 instances at night
      MaxSize: '8' # Maximum of 8 instances during the day
      DesiredCapacity: '2'
      HealthCheckType: EC2
      HealthCheckGracePeriod: 300
      TargetGroupARNs:
        - !Ref TargetGroup
      VPCZoneIdentifier:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2


  # Scheduled Scaling - Scale up to 8 instances at 07:00 AM (GMT-3)
  ScheduledScaleUp:
    Type: 'AWS::AutoScaling::ScheduledAction'
    Properties: 
      AutoScalingGroupName: !Ref AutoScalingGroup
      DesiredCapacity: 8 # Scale to 8 instances at peak time
      Recurrence: '0 10 * * *' # Every day at 10:00 AM UTC

  # Scheduled Scaling - Scale down to 2 instances at 00:00 AM (GMT-3)
  ScheduledScaleDown:
    Type: 'AWS::AutoScaling::ScheduledAction'
    Properties: 
      AutoScalingGroupName: !Ref AutoScalingGroup
      DesiredCapacity: 2 # Scale to 2 instances at off-peak time
      Recurrence: '0 3 * * *' # Every day at 03:00 AM UTC

  # API Gateway Rest API
  ApiGatewayRestApi:
    Type: AWS::ApiGateway::RestApi
    Properties:
      Name: tesina-migration-scenario-diurnal-nocturnal-scaling-monolithic

  # API Gateway Resource
  ApiGatewayResource:
    Type: AWS::ApiGateway::Resource
    Properties:
      RestApiId: !Ref ApiGatewayRestApi
      ParentId: !GetAtt ApiGatewayRestApi.RootResourceId
      PathPart: migration-scenario-diurnal-nocturnal-scaling-monolithic

  # API Gateway Method
  ApiGatewayMethod:
    Type: AWS::ApiGateway::Method
    Properties:
      RestApiId: !Ref ApiGatewayRestApi
      ResourceId: !Ref ApiGatewayResource
      HttpMethod: POST
      AuthorizationType: NONE
      Integration:
        IntegrationHttpMethod: POST
        Type: HTTP
        Uri: !Sub 'http://${LoadBalancer.DNSName}/migration-scenario-diurnal-nocturnal-scaling-monolithic'
        IntegrationResponses:
          - StatusCode: 200
            ResponseParameters:
              method.response.header.Content-Type: "'application/json'"
          - StatusCode: 500
            SelectionPattern: '5\d{2}'
            ResponseTemplates:
              application/json: |
                {
                  "message": "Internal server error"
                }
            ResponseParameters:
              method.response.header.Content-Type: "'application/json'"
      MethodResponses:
        - StatusCode: 200
          ResponseModels:
            application/json: 'Empty'
          ResponseParameters:
            method.response.header.Content-Type: false
        - StatusCode: 500
          ResponseModels:
            application/json: 'Empty'
          ResponseParameters:
            method.response.header.Content-Type: false

  # API Gateway Deployment
  ApiGatewayDeployment:
    Type: AWS::ApiGateway::Deployment
    DependsOn: ApiGatewayMethod
    Properties:
      RestApiId: !Ref ApiGatewayRestApi
      StageName: prod

Outputs:
  LoadBalancerDNSName:
    Description: "DNS name of the load balancer"
    Value: !GetAtt LoadBalancer.DNSName

  ApiGatewayEndpoint:
    Description: Endpoint URL of the API Gateway
    Value: !Sub 'https://${ApiGatewayRestApi}.execute-api.${AWS::Region}.amazonaws.com/prod/migration-scenario-diurnal-nocturnal-scaling-monolithic'
